--- a/src/app/antecedentes-personales/antecedentes-personales.component.html
+++ b/src/app/antecedentes-personales/antecedentes-personales.component.html
@@ -10,9 +10,16 @@
             <div class="row text-left" style="padding-left: 20px">
               <div class="checkbox">
                 <label>
-              <input type="checkbox" name="activado" [(ngModel)]="afeccion.activado">
-              {{afeccion.descripcion}}
-            </label>
+                  <input type="checkbox" name="activado" [(ngModel)]="afeccion.activado"> {{afeccion.descripcion}}
+                  <div *ngIf="mostrar(afeccion)">
+                    <br>
+                    <hr>
+
+                    <strong>
+                      <input class="campoLargo" name="campoOtras" type="text" [(ngModel)]="afeccion.observacion">
+                    </strong>
+                  </div>
+                </label>
               </div>
             </div>
           </div>
